--- a/index.html
+++ b/index.html
@@ -3,7 +3,11 @@
   <head>
     <meta charset="utf-8"></meta>
     <title>qxjit || David Vollbracht</title>
-    <link href="/style.css" rel="stylesheet">
+    <link href="/style.css" rel="stylesheet" type="text/css">
+
+    <noscript>
+      <link href="/nojs.css" rel="stylesheet" type="text/css">
+    </noscript>
     <script src="/tiny.min.js" type="text/javascript"></script>
     <script src="/main.js" type="text/javascript"></script>
     <link href='https://fonts.googleapis.com/css?family=Source+Sans+Pro:400,600,700,300' rel='stylesheet' type='text/css'>
@@ -67,7 +71,7 @@
             I have a wife, son, and daughter who bring me
             joy every day. Our children don't look it, but they are
             1/4 Japanese, so teaching them the language is
-            important to us. We hope to take them to the Japan soon.
+            important to us. We hope to take them to Japan soon.
           </p>
         </div>
       </div>
